tdf#154131 Update UI
Change "scientific numbers" to "scientific notation"

Change-Id: Ic895fda8fb98d0307d05c4a540b4ba43079f8682
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152405
Tested-by: Jenkins
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>

--- a/sc/uiconfig/scalc/ui/textimportcsv.ui
+++ b/sc/uiconfig/scalc/ui/textimportcsv.ui
@@ -587,7 +587,7 @@
                         <property name="column-spacing">12</property>
                         <child>
                           <object class="GtkCheckButton" id="quotedfieldastext">
-                            <property name="label" translatable="yes" context="textimportcsv|quotedfieldastext">F_ormat quoted field as text</property>
+                            <property name="label" translatable="yes" context="textimportcsv|quotedfieldastext">Format _quoted field as text</property>
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">False</property>
@@ -665,7 +665,7 @@
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="detectscientificnumbers">
-                            <property name="label" translatable="yes" context="textimportcsv|detectspecialnumbers">Detect scientific num_bers</property>
+                            <property name="label" translatable="yes" context="textimportcsv|detectspecialnumbers">Detect scientific n_otation</property>
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">False</property>
