--- a/dbaccess/uiconfig/ui/postgrespage.ui
+++ b/dbaccess/uiconfig/ui/postgrespage.ui
@@ -23,7 +23,7 @@
         <property name="margin_bottom">6</property>
         <child internal-child="accessible">
           <object class="AtkObject">
-            <property name="label" translatable="yes" context="specialpostgrespage|header">Set up connection to a PostgreSQL database</property>
+            <property name="AtkObject::accessible-description" translatable="yes" context="specialpostgrespage|header">Set up connection to a PostgreSQL database</property>
             <property name="AtkObject::accessible-role">static</property>
           </object>
         </child>
@@ -43,7 +43,7 @@
         <property name="can_focus">False</property>
         <child internal-child="accessible">
           <object class="AtkObject">
-            <property name="label" translatable="yes" context="specialpostgrespage|helpLabel">Please enter the required information to connect to a PostgreSQL database. Please contact your system administrator if you are unsure about the following settings. </property>
+            <property name="AtkObject::accessible-description" translatable="yes" context="specialpostgrespage|helpLabel">Please enter the required information to connect to a PostgreSQL database. Please contact your system administrator if you are unsure about the following settings. </property>
             <property name="AtkObject::accessible-role">static</property>
           </object>
         </child>
