--- a/cui/util/cui.component
+++ b/cui/util/cui.component
@@ -21,6 +21,7 @@
     xmlns="http://openoffice.org/2010/uno-components">
   <implementation name="com.sun.star.cui.ColorPicker"
     constructor="com_sun_star_cui_ColorPicker_get_implementation">
+    <service name="com.sun.star.cui.AsynchronousColorPicker"/>
     <service name="com.sun.star.ui.dialogs.ColorPicker"/>
     <service name="com.sun.star.ui.dialogs.AsynchronousColorPicker"/>
   </implementation>
