tdf#153721  label change: "Move Chapter..." -> "Move Heading..."
Change-Id: Ice74663d3381b9e360cb8cb739bb5dc4103a0bec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152435
Tested-by: Jenkins
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>
(cherry picked from commit be19f007db146e9b22c1f01dacec0840e44929cb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153599
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/navigatorcontextmenu.ui
+++ b/sw/uiconfig/swriter/ui/navigatorcontextmenu.ui
@@ -57,7 +57,7 @@
       <object class="GtkMenuItem" id="deletechapter">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_DELETE_CHAPTER">Delete Chapter</property>
+        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_DELETE_CHAPTER">Delete Heading</property>
         <property name="use-underline">True</property>
         <accelerator key="Delete" signal="activate"/>
       </object>
@@ -66,7 +66,7 @@
       <object class="GtkMenuItem" id="801">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_PROMOTE_CHAPTER">Move Chapter Up</property>
+        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_PROMOTE_CHAPTER">Move Heading Up</property>
         <property name="use-underline">True</property>
         <accelerator key="Up" signal="activate" modifiers="GDK_CONTROL_MASK"/>
       </object>
@@ -75,7 +75,7 @@
       <object class="GtkMenuItem" id="802">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_DEMOTE_CHAPTER">Move Chapter Down</property>
+        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_DEMOTE_CHAPTER">Move Heading Down</property>
         <property name="use-underline">True</property>
         <accelerator key="Down" signal="activate" modifiers="GDK_CONTROL_MASK"/>
       </object>
