Resolves: tdf#155425 turn off overlay scrolling for color selector
the overlay width is too close to the column width to easily select
the colors in the column beside/underneath an overlay scrollbar

Change-Id: I096a6f2414eb69f10a79a4a0591f3a210c6784de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152507
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>

--- a/svx/uiconfig/ui/colorwindow.ui
+++ b/svx/uiconfig/ui/colorwindow.ui
@@ -108,6 +108,7 @@
             <property name="hscrollbar-policy">never</property>
             <property name="vscrollbar-policy">never</property>
             <property name="shadow-type">in</property>
+            <property name="overlay-scrolling">False</property>
             <child>
               <object class="GtkViewport">
                 <property name="visible">True</property>
